result/0618-131609/stderr.log
In file included from /home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/features.c:4:
/home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/features.h:23:1: error: version control conflict marker in file
   23 | <<<<<<< HEAD
      | ^~~~~~~
/home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/features.h:25:1: error: version control conflict marker in file
   25 | =======
      | ^~~~~~~
/home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/features.h:35:1: error: version control conflict marker in file
   35 | >>>>>>> 53543c52a57977c83214785340da607bd151678c
      | ^~~~~~~
/home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/features.h:35:9: error: invalid suffix "c52a57977c83214785340da607bd151678c" on integer constant
   35 | >>>>>>> 53543c52a57977c83214785340da607bd151678c
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/utils.h:4,
                 from /home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/features.c:5:
/usr/include/stdlib.h:1065:20: error: unknown type name ‘wchar_t’
 1065 | extern int mbtowc (wchar_t *__restrict __pwc,
      |                    ^~~~~~~
In file included from /home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/main.c:8:
/home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/features.h:23:1: error: version control conflict marker in file
   23 | <<<<<<< HEAD
      | ^~~~~~~
/home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/features.h:25:1: error: version control conflict marker in file
   25 | =======
      | ^~~~~~~
/home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/features.h:35:1: error: version control conflict marker in file
   35 | >>>>>>> 53543c52a57977c83214785340da607bd151678c
      | ^~~~~~~
/home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/features.h:35:9: error: invalid suffix "c52a57977c83214785340da607bd151678c" on integer constant
   35 | >>>>>>> 53543c52a57977c83214785340da607bd151678c
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/main.c: In function ‘main’:
/home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/main.c:68:1: error: version control conflict marker in file
   68 | <<<<<<< HEAD
      | ^~~~~~~
/home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/main.c:89:9: error: invalid suffix "c52a57977c83214785340da607bd151678c" on integer constant
   89 | >>>>>>> 53543c52a57977c83214785340da607bd151678c
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/include/stdlib.h:966:1: note: ‘wchar_t’ is defined in header ‘<stddef.h>’; did you forget to ‘#include <stddef.h>’?
  965 | # include <bits/stdlib-bsearch.h>
  +++ |+#include <stddef.h>
  966 | #endif
/usr/include/stdlib.h:1069:31: error: unknown type name ‘wchar_t’
 1069 | extern int wctomb (char *__s, wchar_t __wchar) __THROW;
      |                               ^~~~~~~
/usr/include/stdlib.h:1069:31: note: ‘wchar_t’ is defined in header ‘<stddef.h>’; did you forget to ‘#include <stddef.h>’?
/usr/include/stdlib.h:1073:25: error: unknown type name ‘wchar_t’
 1073 | extern size_t mbstowcs (wchar_t *__restrict  __pwcs,
      |                         ^~~~~~~
/usr/include/stdlib.h:1073:25: note: ‘wchar_t’ is defined in header ‘<stddef.h>’; did you forget to ‘#include <stddef.h>’?
/usr/include/stdlib.h:1078:31: error: unknown type name ‘wchar_t’
 1078 |                         const wchar_t *__restrict __pwcs, size_t __n)
      |                               ^~~~~~~
gmake[2]: *** [CMakeFiles/freud.dir/build.make:107: CMakeFiles/freud.dir/src/main.c.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
In file included from /usr/include/stdlib.h:1159:
/usr/include/x86_64-linux-gnu/bits/stdlib.h:73:37: error: unknown type name ‘wchar_t’
   73 | extern int __wctomb_chk (char *__s, wchar_t __wchar, size_t __buflen)
      |                                     ^~~~~~~
/usr/include/x86_64-linux-gnu/bits/stdlib.h:1:1: note: ‘wchar_t’ is defined in header ‘<stddef.h>’; did you forget to ‘#include <stddef.h>’?
  +++ |+#include <stddef.h>
    1 | /* Checking macros for stdlib functions.
In file included from /usr/include/features.h:502,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdio.h:28,
                 from /home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/features.c:2:
/usr/include/x86_64-linux-gnu/bits/stdlib.h:75:12: error: unknown type name ‘wchar_t’
   75 | extern int __REDIRECT_NTH (__wctomb_alias, (char *__s, wchar_t __wchar),
      |            ^~~~~~~~~~~~~~
/usr/include/x86_64-linux-gnu/bits/stdlib.h:75:12: note: ‘wchar_t’ is defined in header ‘<stddef.h>’; did you forget to ‘#include <stddef.h>’?
/usr/include/x86_64-linux-gnu/bits/stdlib.h:79:1: error: unknown type name ‘wchar_t’
   79 | __NTH (wctomb (char *__s, wchar_t __wchar))
      | ^~~~~
/usr/include/x86_64-linux-gnu/bits/stdlib.h:79:1: note: ‘wchar_t’ is defined in header ‘<stddef.h>’; did you forget to ‘#include <stddef.h>’?
/usr/include/x86_64-linux-gnu/bits/stdlib.h:95:31: error: unknown type name ‘wchar_t’
   95 | extern size_t __mbstowcs_chk (wchar_t *__restrict __dst,
      |                               ^~~~~~~
/usr/include/x86_64-linux-gnu/bits/stdlib.h:95:31: note: ‘wchar_t’ is defined in header ‘<stddef.h>’; did you forget to ‘#include <stddef.h>’?
/usr/include/x86_64-linux-gnu/bits/stdlib.h:99:15: error: unknown type name ‘wchar_t’
   99 | extern size_t __REDIRECT_NTH (__mbstowcs_nulldst,
      |               ^~~~~~~~~~~~~~
/usr/include/x86_64-linux-gnu/bits/stdlib.h:99:15: note: ‘wchar_t’ is defined in header ‘<stddef.h>’; did you forget to ‘#include <stddef.h>’?
/usr/include/x86_64-linux-gnu/bits/stdlib.h:104:15: error: unknown type name ‘wchar_t’
  104 | extern size_t __REDIRECT_NTH (__mbstowcs_alias,
      |               ^~~~~~~~~~~~~~
/usr/include/x86_64-linux-gnu/bits/stdlib.h:104:15: note: ‘wchar_t’ is defined in header ‘<stddef.h>’; did you forget to ‘#include <stddef.h>’?
/usr/include/x86_64-linux-gnu/bits/stdlib.h:109:15: error: unknown type name ‘wchar_t’
  109 | extern size_t __REDIRECT_NTH (__mbstowcs_chk_warn,
      |               ^~~~~~~~~~~~~~
/usr/include/x86_64-linux-gnu/bits/stdlib.h:109:15: note: ‘wchar_t’ is defined in header ‘<stddef.h>’; did you forget to ‘#include <stddef.h>’?
/usr/include/x86_64-linux-gnu/bits/stdlib.h:117:1: error: unknown type name ‘wchar_t’
  117 | __NTH (mbstowcs (wchar_t *__restrict __dst, const char *__restrict __src,
      | ^~~~~
/usr/include/x86_64-linux-gnu/bits/stdlib.h:117:1: note: ‘wchar_t’ is defined in header ‘<stddef.h>’; did you forget to ‘#include <stddef.h>’?
/usr/include/x86_64-linux-gnu/bits/stdlib.h:128:37: error: unknown type name ‘wchar_t’
  128 |                               const wchar_t *__restrict __src,
      |                                     ^~~~~~~
/usr/include/x86_64-linux-gnu/bits/stdlib.h:131:15: error: unknown type name ‘wchar_t’
  131 | extern size_t __REDIRECT_NTH (__wcstombs_alias,
      |               ^~~~~~~~~~~~~~
/usr/include/x86_64-linux-gnu/bits/stdlib.h:136:15: error: unknown type name ‘wchar_t’
  136 | extern size_t __REDIRECT_NTH (__wcstombs_chk_warn,
      |               ^~~~~~~~~~~~~~
/usr/include/x86_64-linux-gnu/bits/stdlib.h:143:1: error: unknown type name ‘wchar_t’
  143 | __NTH (wcstombs (char *__restrict __dst, const wchar_t *__restrict __src,
      | ^~~~~
/home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/features.c:254:1: error: version control conflict marker in file
  254 | <<<<<<< HEAD
      | ^~~~~~~
/home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/features.c:276:9: error: invalid suffix "c52a57977c83214785340da607bd151678c" on integer constant
  276 | >>>>>>> 53543c52a57977c83214785340da607bd151678c
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/features.c:427:1: error: version control conflict marker in file
  427 | >>>>>>> 53543c52a57977c83214785340da607bd151678c
      | ^~~~~~~
/home/runner/work/pgi-2025-the_coarse_tokens/pgi-2025-the_coarse_tokens/src/features.c:427:9: error: invalid suffix "c52a57977c83214785340da607bd151678c" on integer constant
  427 | >>>>>>> 53543c52a57977c83214785340da607bd151678c
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/freud.dir/build.make:93: CMakeFiles/freud.dir/src/features.c.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/freud.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2

The process '/usr/local/bin/cmake' failed with exit code 2